fix a header issue on safari

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -12,9 +12,15 @@ header nav {
   font-weight: 600;
 }
 
+@media (max-width: 600px) {
+  .navi-logo {
+    height: 56px;
+  }
+}
+
 .navi-logo {
   float: left;
-  height: 40px;
+  height: 56px;
 }
 
 @media only screen and (min-width: 601px) and (max-width: 992px) {
